<resources>
    <string name="app_name">Komoke</string>
    <string name="started_title">Hello You</string>
    <string name="started_sub_title">
        Nice to meet you, be the one who can travel nicely!

        <br><b>Login</b> if you have an account</br>
         <br><b>Register</b> to get started with the app</br>
    </string>
    <string name="logo">Logo</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_login">LOGIN</string>
    <string name="login_title">Login to app</string>
    <string name="login_sub_title">
       <font color="#00C9B8"><b>Login</b></font> if you already have an account.
    </string>
    <string name="login_email">Your email or username</string>
    <string name="login_password">Your Password</string>
    <string name="login_forgot_pw">Forgot Password</string>
    <string name="login_havent_account">
       I dont have an account <font color="#00C9B8"><b> Register</b></font>
    </string>
    <string name="register_title">Create an account</string>
    <string name="register_sub_title">
       <font color="#00C9B8"><b>Register</b></font> to get started with the app.
    </string>
    <string name="register_email">Your Username</string>
    <string name="register_mail">Your Email</string>
    <string name="register_date">Select Date</string>
    <string name="register_phone">08xxxxxxxxxx</string>
    <string name="register_already_have_account">
       Already have an account ? <font color="#00C9B8"><b> Login</b></font>
    </string>
    <string name="home_sub_title">Welcome aboard Capt, let\'s go travel</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="date_picker">DatePickerInKotlin</string>
    <string name="long_dummy_text">Silahkan tentukan destinasi anda dengan memesan tiket pesawat atau kereta, hotel, makan dan tiket-tiket lainnya. Hanya di Komoke</string>
</resources>

